--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,5 +8,8 @@ telegram:
     username: ${TELEGRAM_BOT_USERNAME}
     webhook-path: /telegram/webhook
 
+app:
+  base-url: https://astrointel.onrender.com
+
 server:
   port: 8080
