--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,10 @@ telegram:
 
 app:
   base-url: https://astrointel.onrender.com
+  version: 1.1.2
+  features:
+    - Add new feature for reset webhook
+    - Update released notification
 
 server:
   port: 8080
